--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -274,7 +274,7 @@ nav a:hover{
 }
 
 .register_container{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0,0,0.7)),url("login_background2.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0,0,0.7)),url("frontend\src\login_background2.jpg");
   color:white;
   height:100vh;
   width:100vw;
